# django-pigeon

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  pyproject.toml  runtests.py  setup.py
.github/workflows/: ci.yml
pigeon/: test.py
pigeon/tests/: test_render.py  urls.py  views.py
pigeon/url/: utils.py
tests/: test_render.py  urls.py  views.py
