[tool.poetry]
name = "django-pigeon"
version = "0.4.0"
description = "Test utilities for Django projects."
authors = ["Lucas Connors <lucas@revolutiontech.ca>"]
license = "ISC"
packages = [
    { include = "pigeon" },
]
readme = "README.md"
repository = "https://github.com/RevolutionTech/django-pigeon"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.6.1"
Django = ">= 2.2"

[tool.poetry.dev-dependencies]
opstrich = "^0.3.0"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target_version = ["py36", "py37", "py38"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
